--- a/panen.html
+++ b/panen.html
@@ -121,7 +121,7 @@
                     <!-- Kelompok Tani -->
                     <div class="space-y-2">
                         <label class="block text-sm font-medium text-gray-700">
-                            Kelompok Tani
+                            Nama Pengurus Kelompok
                         </label>
                         <select id="kelompokTani" required
                             class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-primary-500 focus:border-primary-500 transition">
@@ -153,7 +153,7 @@
                     <!-- Nama Pemanen -->
                     <div class="space-y-2">
                         <label class="block text-sm font-medium text-gray-700">
-                            Nama Pemanen
+                            Nama Pemanen / Nama Serep
                         </label>
                         <input type="text" id="namaPemanen" required placeholder="Masukkan nama pemanen"
                             class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-primary-500 focus:border-primary-500 transition">
@@ -162,7 +162,7 @@
                     <!-- Kavling (akan diupdate berdasarkan kelompok) -->
                     <div class="space-y-2">
                         <label class="block text-sm font-medium text-gray-700">
-                            Nomor Kavling
+                            Nomor Kavling Pemanen
                         </label>
                         <select id="nomorKavling" required
                             class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-primary-500 focus:border-primary-500 transition" disabled>
@@ -177,15 +177,6 @@
 
                     <!-- Input Grid -->
                     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mb-6">
-                        <!-- Tandan Mentah -->
-                        <div class="space-y-2">
-                            <label class="block text-sm font-medium text-gray-700">
-                                Tandan Mentah
-                            </label>
-                            <input type="number" id="tandanMentah" value="0" min="0" placeholder="0"
-                                class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-primary-500 focus:border-primary-500 transition">
-                        </div>
-
                         <!-- Tandan Matang -->
                         <div class="space-y-2">
                             <label class="block text-sm font-medium text-gray-700">
@@ -194,7 +185,16 @@
                             <input type="number" id="tandanMatang" value="0" min="0" placeholder="0"
                                 class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-primary-500 focus:border-primary-500 transition">
                         </div>
-
+                        
+                        <!-- Tandan Mentah -->
+                        <div class="space-y-2">
+                            <label class="block text-sm font-medium text-gray-700">
+                                Tandan Mentah
+                            </label>
+                            <input type="number" id="tandanMentah" value="0" min="0" placeholder="0"
+                                class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-primary-500 focus:border-primary-500 transition">
+                        </div>
+                        
                         <!-- Tandan Busuk -->
                         <div class="space-y-2">
                             <label class="block text-sm font-medium text-gray-700">
@@ -207,7 +207,7 @@
                         <!-- Jangkos -->
                         <div class="space-y-2">
                             <label class="block text-sm font-medium text-gray-700">
-                                Jangkos
+                                Tandan Jangkos
                             </label>
                             <input type="number" id="tandanJangkos" value="0" min="0" placeholder="0"
                                 class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-primary-500 focus:border-primary-500 transition">
@@ -216,7 +216,7 @@
                         <!-- Berondolan -->
                         <div class="space-y-2">
                             <label class="block text-sm font-medium text-gray-700">
-                                Berondolan (Kg)
+                                Total Berondolan (Kg)
                             </label>
                             <input type="number" id="berondolan" value="0" min="0" step="0.1" placeholder="0"
                                 class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-primary-500 focus:border-primary-500 transition">
@@ -227,23 +227,23 @@
                     <div class="bg-green-50 border border-green-200 rounded-lg p-4">
                         <div class="grid grid-cols-2 md:grid-cols-5 gap-4 mb-4">
                             <div class="text-center">
-                                <div class="text-sm text-gray-600">T. Mentah</div>
+                                <div class="text-sm text-gray-600">TBS Mentah</div>
                                 <div id="totalMentah" class="text-xl font-bold text-gray-800">0</div>
                             </div>
                             <div class="text-center">
-                                <div class="text-sm text-gray-600">T. Matang</div>
+                                <div class="text-sm text-gray-600">TBS Matang</div>
                                 <div id="totalMatang" class="text-xl font-bold text-gray-800">0</div>
                             </div>
                             <div class="text-center">
-                                <div class="text-sm text-gray-600">T. Busuk</div>
+                                <div class="text-sm text-gray-600">TBS Busuk</div>
                                 <div id="totalBusuk" class="text-xl font-bold text-gray-800">0</div>
                             </div>
                             <div class="text-center">
-                                <div class="text-sm text-gray-600">Jangkos</div>
+                                <div class="text-sm text-gray-600">TBS Jangkos</div>
                                 <div id="totalJangkos" class="text-xl font-bold text-gray-800">0</div>
                             </div>
                             <div class="text-center">
-                                <div class="text-sm text-gray-600">Berondolan</div>
+                                <div class="text-sm text-gray-600">Total Berondolan</div>
                                 <div id="totalBerondolan" class="text-xl font-bold text-gray-800">0 Kg</div>
                             </div>
                         </div>
