--- a/index.html
+++ b/index.html
@@ -41,21 +41,21 @@
         <div class="flex flex-wrap gap-2 items-center">
           <button id="addData" 
                   class="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 flex items-center gap-2 text-sm dark:bg-blue-700 dark:hover:bg-blue-800">
-            <i class="bi bi-plus-circle"></i> Tambah Data
+            <i class="bi bi-plus-circle"></i> Tambah
           </button>
           <button id="loadDraftBtn" 
                   class="px-4 py-2 bg-yellow-500 text-white rounded-lg hover:bg-yellow-600 flex items-center gap-2 text-sm hidden dark:bg-yellow-600 dark:hover:bg-yellow-700">
-            <i class="bi bi-cloud-download"></i> Load Draft
+            <i class="bi bi-cloud-download"></i> Draft
           </button>
         </div>
         <div class="flex gap-2">
           <button id="loadData" 
                   class="px-4 py-2 bg-gray-200 text-gray-700 rounded-lg hover:bg-gray-300 flex items-center gap-2 text-sm dark:bg-gray-700 dark:text-gray-200 dark:hover:bg-gray-600">
-            <i class="bi bi-arrow-clockwise"></i> Refresh
+            <i class="bi bi-arrow-clockwise"></i>
           </button>
           <button id="saveData" 
                   class="px-4 py-2 bg-green-600 text-white rounded-lg hover:bg-green-700 flex items-center gap-2 text-sm dark:bg-green-700 dark:hover:bg-green-800">
-            <i class="bi bi-cloud-arrow-up"></i> Simpan
+            <i class="bi bi-cloud-arrow-up"></i> Save
           </button>
         </div>
       </div>
@@ -65,7 +65,7 @@
     <div class="bg-white dark:bg-gray-800 rounded-lg shadow overflow-hidden mb-6">
       <div class="bg-green-600 dark:bg-green-700 text-white px-4 py-3 flex justify-between items-center">
         <h3 class="font-semibold flex items-center text-sm">
-          <i class="bi bi-table me-2"></i>Data Panen
+          # Data Panen
         </h3>
         <div class="flex items-center gap-2">
           <span id="totalData" class="bg-white dark:bg-gray-100 text-green-700 px-2 py-1 rounded text-xs font-medium">0 Data</span>
