--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     <!-- Header -->
     <div class="text-center mb-6">
       <h1 class="text-2xl font-bold text-green-700 dark:text-green-400 mb-2">
-        <i class="bi bi-tree me-2"></i>Pendataan Panen Sawit
+        Pendataan Panen Sawit
       </h1>
       <div class="text-sm text-gray-600 dark:text-gray-300">
-        <p class="mb-1">Input data hasil panen sesuai kelompok masing-masing.</p>
-        <p>Pastikan koneksi internet saat mengisi data.</p>
+        <p class="mb-1">~ ~#Input banyak Data hasil Panen sesuai Kelompok ~~</p>
+        <p>~~ #Pastikan Koneksi Internet saat mengisi Data Panen Kelapa Sawit ~~</p>
       </div>
     </div>
 
