--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pendataan Panen Sawit</title>
+  <title>Pendataan Panen Sawit | Sistem Digital Pencatatan Hasil Panen</title>
   <meta name="google-site-verification" content="X7jo_MwUSeGjuYDL-MGI5_G2_NeIdFjIxe2-cBX0Vew" />
   <!-- Tailwind CSS via CDN -->
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
@@ -13,6 +13,35 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
   <!-- Custom CSS -->
   <link rel="stylesheet" href="style.css">
+
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="Sistem pendataan panen sawit online untuk mencatat hasil panen, tandan, dan berondolan kelapa sawit secara digital dan terstruktur">
+  <meta name="keywords" content="panen sawit, data panen, kelapa sawit, perkebunan sawit, pertanian, data pertanian, manajemen panen">
+  <meta name="author" content="[Nama Perusahaan/Developer]">
+  
+  <!-- Open Graph / Social Media -->
+  <meta property="og:title" content="Pendataan Panen Sawit - Sistem Digital">
+  <meta property="og:description" content="Kelola data panen sawit secara efisien dengan sistem digital">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://domain-anda.com/images/og-image.jpg">
+  <meta property="og:url" content="https://domain-anda.com">
+  
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Pendataan Panen Sawit Digital">
+  <meta name="twitter:description" content="Sistem pencatatan panen sawit modern">
+  
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://domain-anda.com">
+  
+  <!-- Favicon -->
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+
+  <!-- Preconnect untuk CDN -->
+  <link rel="preconnect" href="https://cdn.jsdelivr.net">
+  <link rel="dns-prefetch" href="https://cdn.jsdelivr.net"> 
+  
 </head>
 <body class="bg-gray-50 text-gray-800 min-h-screen dark:bg-gray-900 dark:text-gray-100">
   <!-- Dark Mode Toggle -->
@@ -23,17 +52,30 @@
   </button>
 
   <div class="container mx-auto px-3 py-4 max-w-6xl">
-    <!-- Header -->
+    <!-- Header - perbaikan -->
     <div class="text-center mb-6">
       <h1 class="text-2xl font-bold text-green-700 dark:text-green-400 mb-2">
-        Pendataan Panen Sawit
+        <i class="bi bi-tree me-2"></i>Sistem Pendataan Panen Sawit Digital
       </h1>
+      <h2 class="text-lg font-semibold text-gray-700 dark:text-gray-300 mb-2">
+        Catat dan Kelola Hasil Panen Sawit Secara Real-time
+      </h2>
       <div class="text-sm text-gray-600 dark:text-gray-300">
-        <p class="mb-1">~~ #Input banyak Data hasil Panen sesuai Kelompok dengan KLIK TAMBAH ~~</p>
-        <p>~~ #Pastikan Koneksi Internet saat mengisi Data Panen Kelapa Sawit ~~</p>
+        <p class="mb-1">Input data hasil panen sesuai kelompok masing-masing.</p>
+        <p>Pastikan koneksi internet saat mengisi data.</p>
       </div>
     </div>
-
+    
+    <!-- Tambahkan setelah header -->
+    <nav class="mb-4 text-sm" aria-label="Breadcrumb">
+      <ol class="flex items-center space-x-2 text-gray-600 dark:text-gray-400">
+        <li><a href="/" class="hover:text-green-600">Home</a></li>
+        <li><i class="bi bi-chevron-right"></i></li>
+        <li><a href="/aplikasi" class="hover:text-green-600">Aplikasi</a></li>
+        <li><i class="bi bi-chevron-right"></i></li>
+        <li class="text-green-600 font-medium" aria-current="page">Pendataan Panen</li>
+      </ol>
+    </nav>
     <!-- Form Section -->
     <div class="mb-6">
       <div class="accordion" id="accordionPanen"></div>
@@ -173,6 +215,38 @@
       </div>
     </div>
   </div>
+
+  <!-- Sebelum closing body, tambahkan footer -->
+  <footer class="container mx-auto px-3 py-4 max-w-6xl text-center text-xs text-gray-500 dark:text-gray-400 mt-8 border-t dark:border-gray-700">
+    <p>&copy; 2026 Sistem Pendataan Panen Sawit. All rights reserved.</p>
+    <p class="mt-1">Aplikasi manajemen data panen untuk perkebunan kelapa sawit.</p>
+    <div class="mt-2 flex justify-center space-x-4">
+      <a href="/privacy" class="hover:text-green-600">Kebijakan Privasi</a>
+      <a href="/terms" class="hover:text-green-600">Syarat & Ketentuan</a>
+      <a href="/contact" class="hover:text-green-600">Kontak</a>
+    </div>
+  </footer>
+
+    <!-- Structured Data / JSON-LD -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebApplication",
+    "name": "Sistem Pendataan Panen Sawit",
+    "description": "Aplikasi web untuk pencatatan data panen kelapa sawit",
+    "applicationCategory": "BusinessApplication",
+    "operatingSystem": "Any",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "IDR"
+    },
+    "author": {
+      "@type": "Organization",
+      "name": "[Nama Perusahaan]"
+    }
+  }
+  </script>
 
   <!-- JavaScript Files -->
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
