--- a/index.html
+++ b/index.html
@@ -220,11 +220,11 @@
 
   <!-- Sebelum closing body, tambahkan footer -->
   <footer class="container mx-auto px-3 py-4 max-w-6xl text-center text-xs text-gray-500 dark:text-gray-400 mt-8 border-t dark:border-gray-700">
-    <div class="mt-2 flex justify-center space-x-4">
-      <a href="/privacy.html" class="hover:text-green-600">Kebijakan Privasi</a>
-      <a href="/terms.html" class="hover:text-green-600">Syarat & Ketentuan</a>
-      <a href="/contact.html" class="hover:text-green-600">Kontak</a>
-    </div>
+    <p class="mt-2 flex justify-center space-x-4">
+      <a href="/sawitgo/privacy.html" class="hover:text-green-600">Kebijakan Privasi</a>
+      <a href="/sawitgo/disclaimer.html" class="hover:text-green-600">Syarat & Ketentuan</a>
+      <a href="/sawitgo/contact.html" class="hover:text-green-600">Kontak Kami</a>
+    </p>
     <p>&copy; 2026 Sistem Pendataan Panen Sawit. All rights reserved.</p>
     <p class="mt-1">Aplikasi Manajemen Data Panen Untuk Perkebunan Kelapa Sawit.</p>
   </footer>
